[project]
name = "leaders-followers"
version = "0.1.0"
description = "Key-value store with single-leader replication"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "httpx>=0.27.0",
    "matplotlib>=3.10.7",
    "pydantic>=2.0.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.25.2",
    "uvicorn>=0.30.0",
]
